--- a/Reports/My_report.Rmd
+++ b/Reports/My_report.Rmd
@@ -9,6 +9,8 @@ output:
   html_document:
     toc: false
     df_print: paged
+bibliography: references.bib
+csl: elsevier-with-titles.csl
 ---
 
 \newpage
@@ -85,10 +87,10 @@ ruben^sharma^
 ![Data types](images/data_types.jpeg)
 
 # Methodology
+
 sampling[^2]
 
-[^2]: Adjusted
-\newpage
+[^2]: Adjusted \newpage
 
 ## Study Area
 
@@ -151,29 +153,24 @@ For pdf
 
 \textcolor{green}{The tree is green in color.}
 
+## Equations
 
-## Equations 
-
-1. Simple Mean Equation
+1.  Simple Mean Equation
 
 The formula for mean $\overline{X}$ or $\overline{X}$is as follows:
 
-$$ \overline{X}  = \frac{\sum_i^nx}{n}\tag{i}$$
-where, $\overline{X}$ represents mean, $x$ is observation and $n$ is number of observation.
-
+$$ \overline{X}  = \frac{\sum_i^nx}{n}\tag{i}$$ where, $\overline{X}$ represents mean, $x$ is observation and $n$ is number of observation.
 
 $$\int x^ndx = \frac{1}{n + 1} x^{n + 1}\tag{ii}$$
 
-$$ \int sinh\space ax\space dx = \frac{1}{a}\space cosh\space ax \tag{iii} $$
-$$r = \frac{\sum(x_i- \bar{x})(y_i - \bar{y})}{\sqrt{\sum(x_i-\bar{x})^2 \sum(y_i - \bar{y})^2}}$$
+$$ \int sinh\space ax\space dx = \frac{1}{a}\space cosh\space ax \tag{iii} $$ $$r = \frac{\sum(x_i- \bar{x})(y_i - \bar{y})}{\sqrt{\sum(x_i-\bar{x})^2 \sum(y_i - \bar{y})^2}}$$
 
 Where,
 
-$r = $ Pearson Correlation Coefficient
+\$r = \$ Pearson Correlation Coefficient
 
-$x_i = $ x Variable samples           $y_i = $ y variable sample
+\$x_i = \$ x Variable samples \$y_i = \$ y variable sample
 
+The public health [@fiore2000]
 
-$$$$
-
-
+# Bibliography
